--- a/style.scss
+++ b/style.scss
@@ -1,114 +1,3 @@
 $primary_color: #c94e5d;
-.main_menu {
-	text-align: center;
-	position: relative;
-  height: 60px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: #c94e5d;
-  z-index: 2;
-  /*
-   vertical-align by default baseline.
-   if i give overflow-x auto it makes a break after element
-   If we give vertical-align: top; it solved the problem
-   */
-  overflow-x: auto;
-  vertical-align:top; 
-  white-space: nowrap;
-  display: inline-block;
-  a {
-		display: inline-block;
-		font-size: 20px;
-		padding:15px;
-		box-sizing: border-box;
-	  color: white;
-	  text-decoration: none;
-	  position: relative;
-	  &:hover {
-			text-decoration: underline;
-	  }
-	  &:after {
-			content: "";
-			width: 2px;
-			height: 30px;
-			background: rgba(255, 255, 255, .4);
-			position: absolute;
-			top: 14px;
-			right: -5px;
-	  }
-		&:last-child:after {
-		  height: 0;
-		  width: 0;
-		}
-  }
-}
-
-.wrapper {
-	position: relative;
-}
-#sidebar{
-	float: left;
-	background: beige;
-	border-right: 1px solid tomato;
-	width:280px;
-	height: calc(100vh - 60px);
-	display:block;
-	float: left;
-	.sidebar_auto_scroll {
-		height: 100%;
-		overflow-y: auto;
-	  vertical-align:top; 
-	}
-	#sidebar-btn{
-		display: none;
-	}
-	@media screen and (max-width: 768px) {
-		float: none;
-		position:absolute;
-		left:-280px;
-		top:0px;
-		transition:left 0.3s linear;
-		&.visible{
-			left:0px;
-			transition:left 0.3s linear;
-		}
-		#sidebar-btn{
-			display:inline-block;
-			background: $primary_color;
-			vertical-align: middle;
-			width:22px;
-			height:22px;
-			padding: 1px;
-			box-sizing: border-box;
-			cursor:pointer;
-			margin:20px;
-			position:absolute;
-			top:0px;
-			right:-42px;
-			span {
-				height:2px;
-				background:white;
-				margin-bottom:5px;
-				display:block;
-				&:nth-child(2){
-					width:75%;
-				}
-
-				&:nth-child(3){
-					width:50%;
-				}
-			}
-		}
-		
-	}
-}
-
-.content_area {
-	width: calc(100vw - 280px);
-	float: right;
-	@media screen and (max-width: 768px) {
-		width: 100%;
-		float: none;
-	}
-}
+@import 'menu.scss';
+@import 'left_sidebar_and_right_content.scss';
